[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/HUD_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://src/MainMenu.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "fade"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="TutorialButton" type="Button" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 60.0
margin_top = -71.0
margin_right = 156.0
margin_bottom = -29.0
custom_fonts/font = ExtResource( 1 )
text = "Tutorial"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CasualStartButton" type="Button" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 60.0
margin_top = -21.0
margin_right = 130.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 1 )
text = "Start: Casual"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EasyStartButton" type="Button" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 60.0
margin_top = 30.0
margin_right = 190.0
margin_bottom = 72.0
custom_fonts/font = ExtResource( 1 )
text = "Start: Easy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NormalStartButton" type="Button" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 60.0
margin_top = 80.0
margin_right = 130.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 1 )
text = "Start: Normal"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 60.0
margin_top = -90.0
margin_right = 12.0
margin_bottom = -50.0
custom_fonts/font = ExtResource( 1 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fade" type="AnimationPlayer" parent="ColorRect"]
anims/fade = SubResource( 1 )
[connection signal="pressed" from="CasualStartButton" to="." method="_on_CasualStartButton_pressed"]
[connection signal="pressed" from="EasyStartButton" to="." method="_on_EasyStartButton_pressed"]
[connection signal="pressed" from="NormalStartButton" to="." method="_on_NormalStartButton_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="animation_finished" from="ColorRect/Fade" to="." method="_on_Fade_animation_finished"]
